--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ canvas {
   left: 0;
 }
 body {
-  background: #ffffff;
+  background: #efefef;
   overflow: hidden;
 }
 .container {
@@ -50,7 +50,7 @@ li span {
   z-index: 10;
 }
 .giftbox > div {
-  background: #F64747;
+  background: #59f647;
   position: absolute;
   box-shadow: 5px 10px 18px rgba(0, 0, 0, 0.4);
 }
